--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-captcha",
-  "version": "1.0.1",
+  "version": "1.0.2,
   "description": "Component (es6) Captcha for Vue.js",
   "main": "vue-captcha.vue",
   "scripts": {
@@ -14,7 +14,9 @@
     "javascript",
     "vuejs",
     "captcha",
-    "component"
+    "component",
+    "uuid",
+    "font-awesome"
   ],
   "author": "Rafael Briceño · rafael.ata1991@gmail.com · @rafaelbm91 · https://rafaelbm9a.github.io",
   "license": "MIT",
